app/assets/stylesheets/page.css.sass
$content_width: 840px
$side_width: 300px
$highlight_color: #C02900
$link_color: $highlight_color - #222
$tag_color: #eee

body
  margin: 0px
  font-family: 'Quattrocento Sans', sans-serif
  font-size: 16px

header
  width: $content_width
  position: fixed
  left: 50%
  top: 0px
  color: white
  background-color: #EB2810
  z-index: 10
  a
    color: white
  a.logo
    text-decoration: none
    &:hover
      text-decoration: underline

  margin-left: ($content_width + 16px * 2) / 2 * -1

  -moz-box-shadow: 3px 2px 5px #ccc
  -webkit-box-shadow: 3px 2px 5px #ccc
  box-shadow: 3px 2px 5px #ccc
  margin-top: -3px

  background-color: #C43C35
  background-image: -webkit-linear-gradient(top, rgb(238, 95, 91), rgb(196, 60, 53))
  background-repeat: repeat-x
  border-bottom-color: rgba(0, 0, 0, 0.246094)
  border-bottom-left-radius: 8px
  border-bottom-right-radius: 8px
  border-bottom-style: solid
  border-bottom-width: 1px
  border-left-color: rgba(0, 0, 0, 0.0976562)
  border-left-style: solid
  border-left-width: 1px
  border-right-color: rgba(0, 0, 0, 0.0976562)
  border-right-style: solid
  border-right-width: 1px
  color: white
  padding-bottom: 8px
  padding-top: 11px
  padding-right: 16px
  padding-left: 16px

header #user_login
  float: right

header #user_login a img
  vertical-align: text-bottom
  padding-bottom: 2px

section
  padding-bottom: 20px
  margin: 60px auto 10px auto
  width: $content_width - 40px
  a
    img
      border: none
  a
    color: black
    &:hover
      color: $link_color

  h2
    font-size: 18px
  h3
    color: $highlight_color
    font-size: 16px
    a
      color: $highlight_color !important

section.with_aside

aside
  float: right
  margin-left: 30px
  width: $side_width

  p
    margin-top: 0px
  #user_controls
    margin-bottom: 20px

// Event taglists
ul.tags
  list-style-type: none
  display: block
  font-size: 80%
  margin-top: 10px
  padding-left: 0px
  margin-bottom: 15px
  
  li
    display: inline
    
    a
      text-decoration: none
      background: $tag_color
      //#6291BF
      color: black
      padding: 2px 5px
      border-radius: 3px 3px
  
    a:hover
      background: $tag_color - #222
 
ul.tags.hate_list
  li
    background: $tag_color
    padding: 2px 5px
    margin-right: 4px
    border-radius: 3px 3px
    
    a
      background: none
      border: none
      padding: 0
      
    a.delete:hover
      color: red
      
  li:hover
    background: $tag_color - #222
  
input#user_hate_tags_hate_list
  width: 120px


footer
  clear: both
  height: 20px
  font-size: 11px
  text-align: center
  color: black
  a
    color: black

// Flash

.flash_notice, .flash_error, .flash_alert
  padding: 5px 8px
  margin: 10px 0 

.flash_notice
  background-color: #CFC
  border: solid 1px #6C6

.flash_error, .flash_alert
  background-color: #FCC
  border: solid 1px #C66

.fieldWithErrors
  display: inline

// Error Messages

.error_messages
  width: 400px
  border: 2px solid #CF0000
  padding: 0px
  padding-bottom: 12px
  margin-bottom: 20px
  background-color: #f0f0f0
  font-size: 12px
  h2
    text-align: left
    font-weight: bold
    padding: 5px 10px
    font-size: 12px
    margin: 0
    background-color: #c00
    color: #fff
  p
    margin: 8px 10px
  ul
    margin: 0

// fix broken default error div's on labels:
div.field_with_errors
  display: inline

#main_content
  float: left
  width: 530px

// Welcome Page
p.welcome
  padding-left: 50px
  background-image: url("welcome_logo.png")
  background-repeat: no-repeat

// Misc Styles
.address
  font-style: italic

.entry
  .cityname
    font-size: 14px
    color: #aaa

.clear
  clear: both
  height: 0
  overflow: hidden

#social_stuff
  margin-top: 10px

#fb_like, #twitter_like
  height: 25px

#fb-root div
  overflow: hidden !important

.right_row
  float: right
  width: 350px
  margin-left: 15px
  margin-bottom: 15px

#map_canvas
  margin-bottom: 15px
  border: 1px solid #afafaf

.abbonieren
  input#icallink
    float: left
    width: 200px
    margin-right: 5px
  img#clip_button
    margin-top: 3px

.user_gravatar
  float: right
  margin-left: 15px
  border: 1px solid black

#user_profile  
  h4
    color: $highlight_color
    font-size: 14px
    margin: 25px 0 0px
    font-weight: normal
  .recent_comments, .recent_events, .ignore_tags
    margin-top: 2em
  
fieldset 
  border: 1px solid #afafaf

.abbonieren
  div
    display: inline-block

#map_canvas
  width: 350px
  height: 250px

form
  .help
    color: #9f9f9f
    margin-top: 5px
    font-size: 13px
    overflow: auto
    .preview
      float: left
    .info
      float: right

form.event, form.single_event
  .help
    margin: 0 0 0 200px
    width: 573px
    
  .markdown-preview
    margin-left: 201px
    padding: 10px
    width: 554px
    margin-bottom: 10px
    ul
      list-style-type: disc
      margin: 10px 5px
      li
        margin-left: 14px
	

.event_hinweis
  background-color: #efefef
  padding: 10px
  margin-bottom: 20px
  p
    margin-top: 0px

.left_side
  float: left

.right_side
  float: right
  width: $side_width

.clear
  clear:both

